# octopus

./: .clinerules  README.md  alembic.ini  business_rules.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 20250401083200_add_email_digest_tables.py  20250401145000_add_digest_link_unique_constraint.py  20250402203000_rename_email_story_content.py  20250405143800_add_telegram_stories_table.py  20250405203500_add_telegram_story_unique_constraint.py  20250406180400_add_url_contents_table.py  20250417153300_add_prompts_table.py  5b1e18992b39_add_digests_table.py  9d2211dd37ad_add_target_content_to_stories.py  b11a71e19547_add_story_comments_table.py  ce6c4cf1bc89_rename_topics_to_tags.py  ced16b418849_item_entity.py  fbc897ed9c61_add_item_entities_table.py
octopus/: main.py  settings.py
octopus/data_providers/gmail/: __init__.py
octopus/data_providers/hacker_news/: __init__.py
octopus/db/: operations.py  session.py
octopus/genai/: processor.py
octopus/processing/: content_extractor.py  digest_context.py  story_processor.py  url_normalizer.py
octopus/schemas/: digest.py
octopus/scripts/: cleanup_duplicate_items.py  cleanup_empty_content_stories.py  cleanup_old_digests.py  cleanup_zero_score_relations.py  email_process_digests.py  email_process_stories.py  generate_daily_update.py  generate_story_summaries.py  generate_tech_digest.py  hn_get_new_stories.py  hn_update_story_comments.py  hn_update_story_content.py  hn_update_story_votes.py  normalize_existing_urls.py  revise_tags.py  telegram_get_new_stories.py  telegram_process_stories.py
(+13 files in other folders)
